Add starter code for assignment

--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "prestart": "tsc",
     "start": "node ./out/index.js",
     "watch": "tsc --watch",
-    "dev": "nodemon",
     "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "chalk": "^4.1.2",
+    "prompt-sync": "^4.2.0"
+  },
   "devDependencies": {
     "@types/node": "^20.12.7",
-    "typescript": "^5.4.5",
-    "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2"
+    "@types/prompt-sync": "^4.2.3",
+    "typescript": "^5.4.5"
   }
 }
